# hackathon-gtfs

./: .gitignore  README.md  app.py  gtfs_notebook.ipynb  main.py  pyproject.toml
content/: gtfs_notebook.ipynb
data/: troncons_uniques_bus.csv  troncons_uniques_tram.csv
src/: arrets.py  cartographie.py  create_troncons_uniques.py  indicateurs_troncons.py  utils.py
views/: home.py  troncons.py
