[project]
name = "hackathon-gtfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "gtfs-kit>=12.0.0",
    "ipykernel>=7.1.0",
    "shapely>=2.1.2",
    "streamlit>=1.51.0",
]
